# AndroidDemo

./: README.md
MyApplication2/: build.gradle  local.properties
MyApplication2/app/: build.gradle
MyApplication2/app/src/main/: AndroidManifest.xml
MyApplication2/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  TextureAsset.cpp  TextureAsset.h  main.cpp
MyApplication2/app/src/main/java/com/example/myapplication/: MainActivity.java
MyApplication2/app/src/main/res/values/: themes.xml
MyApplication2/gradle/wrapper/: gradle-wrapper.properties
